--- a/Final.ipynb
+++ b/Final.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/NeoRedcraft/nlp-project-1/blob/main/Final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/NeoRedcraft/nlp-project-1/blob/Qwen%2FQwen3-0.6B/Final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -867,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1228,7 +1228,7 @@
         "\n",
         "\n",
         "# 1. Define the Qwen model ID\n",
-        "model_id = \"Qwen/Qwen1.5-7B-Chat\"\n",
+        "model_id = \"Qwen/Qwen3-0.6B\"\n",
         "\n",
         "# 2. Load Tokenizer and Model (with quantization for memory efficiency)\n",
         "print(f\"Loading tokenizer and model for {model_id}...\")\n",
@@ -1307,7 +1307,7 @@
         "id": "84UB3UV17187",
         "outputId": "ed740607-947c-4c71-bd3b-bcffa2631982"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,7 +1344,7 @@
         "id": "8p9y0GlN-4S1",
         "outputId": "41165a4e-ede9-4dfe-c06d-f237afd36c49"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
