--- a/Final.ipynb
+++ b/Final.ipynb
@@ -2840,12 +2840,128 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Re-initialize the pipeline\n",
+        "hf_pipeline = pipeline(\n",
+        "    \"text-generation\",\n",
+        "    model=model,\n",
+        "    tokenizer=tokenizer,\n",
+        "    max_new_tokens=256,\n",
+        "    do_sample=True,\n",
+        "    temperature=0.1,\n",
+        "    top_p=0.95,\n",
+        "    repetition_penalty=1.15,\n",
+        "    return_full_text=False\n",
+        ")\n",
+        "\n",
+        "llm = HuggingFacePipeline(pipeline=hf_pipeline)\n",
+        "\n",
+        "# Re-create the chain with the clean LLM\n",
+        "qa_chain = RetrievalQA.from_chain_type(\n",
+        "    llm=llm,\n",
+        "    chain_type=\"stuff\",\n",
+        "    retriever=retriever,\n",
+        "    return_source_documents=True\n",
+        ")\n",
+        "\n",
+        "# Custom Evaluation Functions\n",
+        "def simple_faithfulness(answer, contexts):\n",
+        "    \"\"\"Checks if key terms from the answer are present in the retrieved context.\"\"\"\n",
+        "    if not answer or not contexts:\n",
+        "        return 0.0\n",
+        "    stop_words = set(['the', 'is', 'a', 'an', 'and', 'or', 'of', 'to', 'in', 'it', 'that'])\n",
+        "    answer_words = [w.lower() for w in answer.split() if w.lower() not in stop_words and len(w) > 3]\n",
+        "\n",
+        "    if not answer_words:\n",
+        "        return 0.0\n",
+        "\n",
+        "    context_text = \" \".join(contexts).lower()\n",
+        "    matches = sum(1 for word in answer_words if word in context_text)\n",
+        "    return matches / len(answer_words)\n",
+        "\n",
+        "def simple_context_precision(ground_truth, contexts):\n",
+        "    \"\"\"Checks if the ground truth keywords are found in the retrieved context.\"\"\"\n",
+        "    if not ground_truth or not contexts:\n",
+        "        return 0.0\n",
+        "\n",
+        "    stop_words = set(['the', 'is', 'a', 'an', 'and', 'or', 'of', 'to', 'in', 'it', 'that'])\n",
+        "    gt_words = [w.lower() for w in ground_truth.split() if w.lower() not in stop_words and len(w) > 3]\n",
+        "\n",
+        "    if not gt_words:\n",
+        "        return 0.0\n",
+        "\n",
+        "    context_text = \" \".join(contexts).lower()\n",
+        "    matches = sum(1 for word in gt_words if word in context_text)\n",
+        "    return matches / len(gt_words)\n",
+        "\n",
+        "# 1. Prepare Data\n",
+        "sample_question = \"Can people with mental illness recover?\"\n",
+        "print(f\"Generating sample response for: '{sample_question}'...\")\n",
+        "\n",
+        "# Invoke the QA chain\n",
+        "response = qa_chain.invoke({'query': sample_question})\n",
+        "generated_answer = response['result']\n",
+        "retrieved_contexts = [doc.page_content for doc in response.get('source_documents', [])]\n",
+        "ground_truth = \"When healing from mental illness, early identification and treatment are of vital importance. Based on the nature of the illness, there are a range of effective treatments available. For any type of treatment, it is essential that the person affected is proactive and fully engaged in their own recovery process. Many people with mental illnesses who are diagnosed and treated respond well, although some might experience a return of symptoms. Even in such cases, with careful monitoring and management of the disorder, it is still quite possible to live a fulfilled and productive life.\"\n",
+        "\n",
+        "print(f\"\\nGenerated Answer: {generated_answer[:100]}...\")\n",
+        "\n",
+        "# 2. Run Custom Evaluation\n",
+        "faithfulness_score = simple_faithfulness(generated_answer, retrieved_contexts)\n",
+        "context_precision_score = simple_context_precision(ground_truth, retrieved_contexts)\n",
+        "\n",
+        "# Simple embedding-based relevancy\n",
+        "# Ensure embeddings object is available; if not, re-initialize it (assuming import is present from previous cells or environment)\n",
+        "try:\n",
+        "    query_vec = embeddings.embed_query(sample_question)\n",
+        "    ans_vec = embeddings.embed_query(generated_answer)\n",
+        "    relevancy_score = cosine_similarity([query_vec], [ans_vec])[0][0]\n",
+        "except NameError:\n",
+        "    # Fallback if embeddings is not in local scope, though it should be\n",
+        "    from langchain_huggingface import HuggingFaceEmbeddings\n",
+        "    embeddings = HuggingFaceEmbeddings(model_name='sentence-transformers/all-MiniLM-L6-v2')\n",
+        "    query_vec = embeddings.embed_query(sample_question)\n",
+        "    ans_vec = embeddings.embed_query(generated_answer)\n",
+        "    relevancy_score = cosine_similarity([query_vec], [ans_vec])[0][0]\n",
+        "\n",
+        "results = {\n",
+        "    'faithfulness': faithfulness_score,\n",
+        "    'answer_relevancy': float(relevancy_score),\n",
+        "    'context_precision': context_precision_score\n",
+        "}\n",
+        "\n",
+        "print(\"\\nEvaluation Results (Simplified Custom Metrics):\")\n",
+        "print(results)"
+      ],
       "metadata": {
-        "id": "SbmVCTncc-Mi"
+        "id": "eIfEVnGfks-B",
+        "outputId": "13c01345-0ce7-44fc-8d1d-5729cf51b306",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Both `max_new_tokens` (=256) and `max_length`(=20) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Generating sample response for: 'Can people with mental illness recover?'...\n",
+            "\n",
+            "Generated Answer:  Yes, people can recover from mental illness. The key factors include early detection and treatment,...\n",
+            "\n",
+            "Evaluation Results (Simplified Custom Metrics):\n",
+            "{'faithfulness': 0.2773722627737226, 'answer_relevancy': 0.7253147929612682, 'context_precision': 1.0}\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
